--- a/src/homePage.html
+++ b/src/homePage.html
@@ -9,11 +9,14 @@
   </head>
   <body>
 
+<div class="tab"></div>
+
 <div class="box"></div>
 
     <div class="logOut">
         <button class="logOut" id="logOut">Log out</button>
     </div>
+
     <script type="module" src="homePage.js"></script>
     <script type="module" src="logOut.js"></script>
   </body>
