--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,9 @@
     <button id="login">Log in</button> <br/>
     <p class="invalidLogin">Invalid token, please try again</p>
     <label>Remember me <input type="checkbox" id="remember"></button></label>
+    <button id="signUp">Sign up</button>
    </div>
+   
     <script type="module" src="index.js"></script>
   </body>
 </html> 
